--- a/src/Busybee/StaffBundle/Resources/config/services.yml
+++ b/src/Busybee/StaffBundle/Resources/config/services.yml
@@ -17,7 +17,7 @@ parameters:
             - p.surname
             - p.firstName
             - p.email
-        choice:
+        choices:
             all:
                 route: person_manage
                 prompt: pagination.person.all
