--- a/src/Busybee/FamilyBundle/Resources/config/routing.yml
+++ b/src/Busybee/FamilyBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 family_manage:
-    path:     /manage/{currentSearch}
-    defaults: { _controller: BusybeeFamilyBundle:Family:index, currentSearch: null }
+    path:     /manage/
+    defaults: { _controller: BusybeeFamilyBundle:Family:index }
 family_edit:
-    path:     /{id}/edit/{currentSearch}/
-    defaults: { _controller: BusybeeFamilyBundle:Family:edit, currentSearch: 'null' }
+    path:     /{id}/edit/
+    defaults: { _controller: BusybeeFamilyBundle:Family:edit }
