--- a/src/Busybee/PersonBundle/Resources/config/services.yml
+++ b/src/Busybee/PersonBundle/Resources/config/services.yml
@@ -18,7 +18,7 @@ parameters:
             - p.surname
             - p.firstName
             - p.email
-        choice:
+        choices:
             all:
                 route: person_manage
                 prompt: pagination.person.all
