--- a/src/Busybee/StaffBundle/Resources/config/routing.yml
+++ b/src/Busybee/StaffBundle/Resources/config/routing.yml
@@ -2,5 +2,5 @@ person_toggle_staff:
     path:     /person/{id}/toggle/
     defaults: { _controller: BusybeeStaffBundle:Staff:toggle }
 staff_manage:
-    path:     /manage/{limit}{currentSearch}
-    defaults: { _controller: BusybeeStaffBundle:Staff:list, currentSearch: null, limit: null }
+    path:     /manage/
+    defaults: { _controller: BusybeeStaffBundle:Staff:list }
