--- a/src/Busybee/StudentBundle/Resources/config/routing.yml
+++ b/src/Busybee/StudentBundle/Resources/config/routing.yml
@@ -5,11 +5,11 @@ student_activities:
     path:     /activities/
     defaults: { _controller: BusybeeStudentBundle:Activity:list }
 student_activity_edit:
-    path:     /activity/{id}/edit/{currentSearch}
-    defaults: { _controller: BusybeeStudentBundle:Activity:edit, id: 'Add', currentSearch: null }
+    path:     /activity/{id}/edit/
+    defaults: { _controller: BusybeeStudentBundle:Activity:edit, id: 'Add' }
 student_activity_list:
     path:     /activity/{id}/list/
     defaults: { _controller: BusybeeStudentBundle:Activity:studentList }
 student_manage:
-    path:     /manage/{limit}{currentSearch}
-    defaults: { _controller: BusybeeStudentBundle:Student:list, currentSearch: null, limit: null }
+    path:     /manage/
+    defaults: { _controller: BusybeeStudentBundle:Student:list }
