--- a/src/Busybee/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/StudentBundle/Resources/config/services.yml
@@ -48,7 +48,7 @@ parameters:
             - p.surname
             - p.firstName
             - p.email
-        choice:
+        choices:
             all:
                 route: person_manage
                 prompt: pagination.person.all
