End of Day 29th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
+++ b/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
@@ -8,6 +8,7 @@ Busybee\StudentBundle\Entity\Activity:
             fields: [nameShort, year]
             errorPath: nameShort
             message: activity.unique.nameShort
+        - Callback: studentNumbersValidate
     properties:
         name:
             - NotBlank: ~
