End of Day 30th May 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/Period.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/Period.orm.yml
@@ -33,6 +33,7 @@ Busybee\TimeTableBundle\Entity\Period:
         activities:
             targetEntity: Busybee\TimeTableBundle\Entity\PeriodActivity
             mappedBy: period
+            cascade: [ 'all' ]
     manyToOne:
         column:
             targetEntity: Busybee\TimeTableBundle\Entity\Column
