--- a/src/Busybee/TimeTableBundle/Resources/config/validation/Period.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/validation/Period.yml
@@ -8,6 +8,7 @@ Busybee\TimeTableBundle\Entity\Period:
             fields: [nameShort, column]
             errorPath: nameShort
             message: 'timetable.column.nameShort.unique'
+        - Callback: [ Busybee\TimeTableBundle\Validator\PeriodActivity, validate ]
     properties:
         column:
             - Valid: ~
