--- a/src/Busybee/StudentBundle/Resources/config/routing.yml
+++ b/src/Busybee/StudentBundle/Resources/config/routing.yml
@@ -5,8 +5,8 @@ student_activities:
     path:     /activities/
     defaults: { _controller: BusybeeStudentBundle:Activity:list }
 student_activity_edit:
-    path:     /activity/{id}/edit/
-    defaults: { _controller: BusybeeStudentBundle:Activity:edit, id: 'Add' }
+    path:     /activity/{id}/edit/{closeWindow}
+    defaults: { _controller: BusybeeStudentBundle:Activity:edit, id: 'Add', closeWindow: '' }
 student_activity_list:
     path:     /activity/{id}/list/
     defaults: { _controller: BusybeeStudentBundle:Activity:studentList }
