End of Day 2nd June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -34,3 +34,6 @@ column_resettimes:
 period_plan:
     path:     /plan/{id}/activity/
     defaults: { _controller: BusybeeTimeTableBundle:Period:activityPlan }
+period_plan_report:
+    path:     /plan/{id}/activity/report/
+    defaults: { _controller: BusybeeTimeTableBundle:Period:report }
