End of Day 5th June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -43,3 +43,6 @@ period_add_activities_to_plan:
 period_remove_activity:
     path:     /plan/{id}/remove/{activity}/activities/
     defaults: { _controller: BusybeeTimeTableBundle:Period:removePeriodActivity }
+period_activity_edit:
+    path:     /plan/{activity}/edit/activity/
+    defaults: { _controller: BusybeeTimeTableBundle:Period:editPeriodActivity }
