End of Day 6th June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Grade.orm.yml
@@ -19,6 +19,10 @@ Busybee\InstituteBundle\Entity\Grade:
             targetEntity: Busybee\StudentBundle\Entity\StudentGrade
             mappedBy: grade
             cascade: [ 'persist' ]
+    manyToMany:
+        activities:
+            targetEntity: Busybee\StudentBundle\Entity\Activity
+            mappedBy: grades
     manyToOne:
         year:
             targetEntity: Busybee\InstituteBundle\Entity\Year
