--- a/src/Busybee/StudentBundle/Resources/config/doctrine/Student.orm.yml
+++ b/src/Busybee/StudentBundle/Resources/config/doctrine/Student.orm.yml
@@ -110,3 +110,7 @@ Busybee\StudentBundle\Entity\Student:
             joinColumns:
                 modified_by:
                     referencedColumnName: id
+    manyToMany:
+        activities:
+            targetEntity: Busybee\StudentBundle\Entity\Activity
+            mappedBy: students
