Period Report - Test all students are assigned in a grade in a period.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/services.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/services.yml
@@ -181,3 +181,8 @@ services:
         arguments:
             - '@busybee_security.user_manager'
             - '@security.token_storage'
+    current.year.currentYear:
+        class: CurrentYear
+        factory:
+            - '@current.year'
+            - 'getCurrentYear'
