--- a/src/Busybee/TimeTableBundle/Resources/config/services.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/services.yml
@@ -163,7 +163,7 @@ services:
             - '@doctrine.orm.entity_manager'
             - '@translator'
             - '@session.flash_bag'
-            - '@current.year'
+            - '@current.year.currentYear'
     periods.validator:
         class: Busybee\TimeTableBundle\Validator\Constraints\PeriodsValidator
         arguments:
