Report and TimeTable Planning
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
@@ -19,6 +19,7 @@ student.enrolment.status:
     value:
         Future: Future
         Current: Current
+        Left: Left
         Past: Past
         Archived: Archived
 department.type.list:
