End of Day 10th June 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/StudentBundle/Resources/config/services.yml
@@ -6,6 +6,11 @@ parameters:
                 a.name: ASC
                 a.nameShort: ASC
                 y.firstDay: DESC
+            Grade:
+                g.sequence: ASC
+                a.name: ASC
+                a.nameShort: ASC
+                y.name: ASC
         limit: '25'
         searchList:
             - a.name
